--- a/GoogleBooks/Classes/PresentationLayer/UserStories/BookListUserStory/Storyboard/BookList.storyboard
+++ b/GoogleBooks/Classes/PresentationLayer/UserStories/BookListUserStory/Storyboard/BookList.storyboard
@@ -17,7 +17,26 @@
                     <view key="view" contentMode="scaleToFill" id="8ZB-0k-i5Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for books" translatesAutoresizingMaskIntoConstraints="NO" id="AWJ-fc-OOY">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h9I-vH-iXx">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="h9I-vH-iXx" firstAttribute="top" secondItem="AWJ-fc-OOY" secondAttribute="bottom" id="AVi-Vh-OAx"/>
+                            <constraint firstItem="AWJ-fc-OOY" firstAttribute="top" secondItem="Gbk-31-yeJ" secondAttribute="top" id="XOW-gu-rCq"/>
+                            <constraint firstItem="AWJ-fc-OOY" firstAttribute="trailing" secondItem="Gbk-31-yeJ" secondAttribute="trailing" id="hfu-F4-4WM"/>
+                            <constraint firstItem="AWJ-fc-OOY" firstAttribute="leading" secondItem="Gbk-31-yeJ" secondAttribute="leading" id="iOj-kW-LkW"/>
+                            <constraint firstItem="h9I-vH-iXx" firstAttribute="leading" secondItem="Gbk-31-yeJ" secondAttribute="leading" id="nKU-df-Wnv"/>
+                            <constraint firstItem="Gbk-31-yeJ" firstAttribute="trailing" secondItem="h9I-vH-iXx" secondAttribute="trailing" id="pqs-ZN-eqZ"/>
+                            <constraint firstAttribute="bottom" secondItem="h9I-vH-iXx" secondAttribute="bottom" id="xB3-g4-DWM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Gbk-31-yeJ"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
