--- a/GoogleBooks/Classes/PresentationLayer/UserStories/BookListUserStory/Storyboard/BookList.storyboard
+++ b/GoogleBooks/Classes/PresentationLayer/UserStories/BookListUserStory/Storyboard/BookList.storyboard
@@ -75,17 +75,24 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Mkb-nz-kkp">
+                                <rect key="frame" x="169" y="347" width="37" height="37"/>
+                                <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="QJm-hU-1JM" firstAttribute="trailing" secondItem="YX0-xG-fsN" secondAttribute="trailing" id="0ba-Hu-Wiw"/>
+                            <constraint firstItem="Mkb-nz-kkp" firstAttribute="centerX" secondItem="QJm-hU-1JM" secondAttribute="centerX" id="0qP-ag-Rbg"/>
                             <constraint firstItem="YX0-xG-fsN" firstAttribute="leading" secondItem="QJm-hU-1JM" secondAttribute="leading" id="9yf-aE-fzY"/>
                             <constraint firstAttribute="bottom" secondItem="YX0-xG-fsN" secondAttribute="bottom" id="QMf-52-xOW"/>
+                            <constraint firstItem="Mkb-nz-kkp" firstAttribute="centerY" secondItem="QJm-hU-1JM" secondAttribute="centerY" id="SQS-MT-CTG"/>
                             <constraint firstItem="YX0-xG-fsN" firstAttribute="top" secondItem="QJm-hU-1JM" secondAttribute="top" id="Sjj-mD-wQB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QJm-hU-1JM"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Mkb-nz-kkp" id="SBW-Yu-vsf"/>
                         <outlet property="tableView" destination="YX0-xG-fsN" id="qSD-ZQ-KcX"/>
                     </connections>
                 </viewController>
