Update layout of cells

--- a/GoogleBooks/Classes/PresentationLayer/UserStories/BookDetailsUserStory/Modules/BookDetails/View/Cells/BookDescriptionCell/BookDescriptionTableViewCell.xib
+++ b/GoogleBooks/Classes/PresentationLayer/UserStories/BookDetailsUserStory/Modules/BookDetails/View/Cells/BookDescriptionCell/BookDescriptionTableViewCell.xib
@@ -20,11 +20,11 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptL-Wq-pVw">
-                        <rect key="frame" x="16" y="16" width="91" height="20.5"/>
+                        <rect key="frame" x="16" y="16" width="92.5" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="8h4-eI-qGL"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
